moving to topics

--- a/_posts/2016-12-14-about.md
+++ b/_posts/2016-12-14-about.md
@@ -2,11 +2,10 @@
 priority: 0.7
 title: Project Aude esse Magni
 excerpt: About the creation of the website
-categories: works
-background-image: banner.png
 tags:
   - About
   - Aude Magni
+date: 2016-12-14 6:00
 ---
 
 ####Dare to be great.
