still trying to topics

--- a/_posts/2016-12-14-about.md
+++ b/_posts/2016-12-14-about.md
@@ -3,8 +3,9 @@ priority: 0.7
 title: Project Aude esse Magni
 excerpt: About the creation of the website
 tags:
-  - About
-  - Aude Magni
+ - topics
+ - About
+ - Aude Magni
 date: 2016-12-14 6:00
 ---
 
