changes and fix to post 1

--- a/_posts/2016-12-14-about.md
+++ b/_posts/2016-12-14-about.md
@@ -10,10 +10,9 @@ date: 2016-12-14 6:00
 ---
 
 ####Dare to be great.
-Many people abide to this phrase or, at least, want to do so. However, our world needs much more than great people: The world needs people good intentions. 
-It is fair to desire personal fulfillment and many accomplishments, but to wish for a better world, to defend justice, and to take care of one another; that is true greatness.  Therefore, t is **righteous** to be self-centered *Tantum Quantum* it is with good intentions for each other, for the world. Focusing on being great and righteous is what ***Aude esse Magni*** is about.
+Many people abide to this phrase or, at least, want to do so. However, our world needs much more than great people: The world needs people with good intentions. 
+It is fair to desire personal fulfillment and many accomplishments, but to wish for a better world, to defend justice, and to take care of one another; that is true greatness.  Therefore, it is **righteous** to be self-centered *Tantum Quantum* it is with good intentions for each other, for the world. Focusing on being great and righteous is what ***Aude esse Magni*** is about.
 
 -If **you** desire to bring goodness to the world and wish to act accordingly, you are the one who will benefit from anything you find in this website.  
--If **you** do not desire to bring goodness, nor wish to change your desire, I recommend you to come back when you have changed. You will not benefit from anything posted here.
 
-Here you will find the ethics, methods and reflections I have crafted throughout many years. I hope it will affect your life as much as it did affect mine. My **3** objectives are to develop the recipe of the most righteous person that could exist, "mix and bake" myself, and share both the recipe and the results of my "baking" experience with you. I hope you enjoy the "cake"!
+Here you will find ethics, methods and reflections that have been gathered throghout many years. I hope to share **3** things: recipes to good things, insights through the "cooking experience," and the results. Enjoy!
