test layout of post 1

--- a/_posts/2016-12-14-about.md
+++ b/_posts/2016-12-14-about.md
@@ -1,12 +1,9 @@
 ---
-priority: 0.7
 title: Project Aude esse Magni
+categories: topics
+tags: featured
 excerpt: About the creation of the website
-tags:
- - topics
- - About
- - Aude Magni
-date: 2016-12-14 6:00
+author: VL
 ---
 
 ####Dare to be great.
