changes to author and post1

--- a/_posts/2016-12-14-about.md
+++ b/_posts/2016-12-14-about.md
@@ -3,7 +3,8 @@ title: Project Aude esse Magni
 categories: topics
 tags: featured
 excerpt: About the creation of the website
-author: VL
+background-image: banner.png
+
 ---
 
 ####Dare to be great.
