--- a/_posts/2016-12-14-about.md
+++ b/_posts/2016-12-14-about.md
@@ -7,11 +7,11 @@ background-image: banner.png
 
 ---
 
-####Dare to be great.
+***Aude esse Magni*** = ***Dare to be great*** 
 
 Many people abide to this phrase or, at least, want to do so. However, our world needs much more than great people: The world needs people with good intentions.
-It is fair to desire personal fulfillment and many accomplishments, but to wish for a better world, to defend justice, and to take care of one another; that is true greatness.  Therefore, it is **righteous** to be self-centered *Tantum Quantum* it is with good intentions for each other, for the world. Focusing on being great and righteous is what ***Aude esse Magni*** is about.
+It is fair to desire personal fulfillment and many accomplishments in life, but to wish for a better world, to defend justice, and to take care of one another; that is true greatness.  Therefore, it is **righteous** to be self-centered *Tantum Quantum* it is with good intentions for each other, for the world. Focusing on being great and righteous is what ***Aude esse Magni*** is about.
 
 -If **you** desire to bring goodness to the world and wish to act accordingly, you are the one who will benefit from anything you find in this website.  
 
-Here you will find ethics, methods and reflections that have been gathered throghout many years. I hope to share **3** things: recipes to good things, insights through the "cooking experience," and the results. Enjoy!
+Here you will find ethics, methods and reflections that have been gathered throghout many years, altogether with the personal experiences and opinion on the subject. "A recipe that comes with the comments of the chef tends to be tastier and are easier to be understood." 
