added picture and tryiong to post w/ picture

--- a/_posts/2016-12-14-about.md
+++ b/_posts/2016-12-14-about.md
@@ -3,7 +3,7 @@ title: Project Aude esse Magni
 categories: topics
 tags: featured
 excerpt: About the creation of the website
-background-image: banner.png
+background-image: DSC_0077.JPG
 
 ---
 
