--- a/_posts/2017-06-13-Dreams.md
+++ b/_posts/2017-06-13-Dreams.md
@@ -3,9 +3,7 @@ layout: post
 title:  "Dreams"
 date:   2017-06-13
 excerpt: "An article is to come. This is anticipation."
-tag: 
-- post
-- video
+tag: [post, video]
 comments: true
 ---
 
