--- a/_posts/2017-07-17-Friends.md
+++ b/_posts/2017-07-17-Friends.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "People who dare"
+title:  "Friends"
 date:   2017-07-17
-excerpt: "Minimal, one column Jekyll theme for your blog."
+excerpt: "People who dare"
 project: true
 tag:
 - friends
