--- a/_posts/2017-07-17-Friends.md
+++ b/_posts/2017-07-17-Friends.md
@@ -12,4 +12,4 @@ comments: false
 
 Aude esse Magni is a community, which means that people with different backgrounds and opinions converge into the subject of daring for greatness. Here are some friends that dare in other subjects too.
 
-[Vatsal Mehra](vatsalmehra.com)
+[Vatsal Mehra](https://vatsalmehra.com)
