--- a/_posts/2017-07-17-Friends.md
+++ b/_posts/2017-07-17-Friends.md
@@ -12,4 +12,5 @@ comments: false
 
 Aude esse Magni is a community, which means that people with different backgrounds and opinions converge into the subject of daring for greatness. Here are some friends that dare in other subjects too.
 
-[Vatsal Mehra](https:/vatsalmehra.com)
+[Vatsal Mehra]({{ site.url }}/assets/img/cavus.JPG)
+[![booo]({{ site.url }}/assets/img/cavus.JPG)](google.com)
