--- a/_posts/2017-07-17-Friends.md
+++ b/_posts/2017-07-17-Friends.md
@@ -10,8 +10,8 @@ tag:
 comments: false
 ---
 
-Aude esse Magni is a community, which means that people with different backgrounds and opinions converge into the subject of daring for greatness. Here are some friends that dare in other subjects too.
+Aude esse Magni is a community, which means that people with different backgrounds and opinions converge into the subject of daring for greatness. Here are some friends that daring in other realms.
 
-[![boo]({{ site.url }}/assets/img/VM.PNG)](https://vatsalmehra.com)
+[![VM]({{ site.url }}/assets/img/VM.PNG)](https://vatsalmehra.com)
 
-[![booo]({{ site.url }}/assets/img/CS.JPG)](https://recoveredbutnotrelieved.wordpress.com)
+[![CS]({{ site.url }}/assets/img/CS.JPG)](https://recoveredbutnotrelieved.wordpress.com)
