--- a/_posts/2017-07-17-Friends.md
+++ b/_posts/2017-07-17-Friends.md
@@ -12,6 +12,6 @@ comments: false
 
 Aude esse Magni is a community, which means that people with different backgrounds and opinions converge into the subject of daring for greatness. Here are some friends that daring in other realms.
 
-[![VM]({{ site.url }}/assets/img/vm.png)](https://vatsalmehra.com)
+[![VM]({{ site.url }}/assets/img/supafriend1.png)](https://vatsalmehra.com)
 
-[![CS]({{ site.url }}/assets/img/cs.jpg)](https://recoveredbutnotrelieved.wordpress.com)
+[![CS]({{ site.url }}/assets/img/supafriend2.jpg)](https://recoveredbutnotrelieved.wordpress.com)
