simple changes to 2 posts

--- a/_posts/2017-07-17-Friends.md
+++ b/_posts/2017-07-17-Friends.md
@@ -10,7 +10,7 @@ tag:
 comments: false
 ---
 
-Aude esse Magni is a community, which means that people with different backgrounds and opinions converge into the subject of daring for greatness. Here are some friends that daring in other realms.
+Aude esse Magni is a community, which means that people with different backgrounds and opinions converge into the subject of daring for greatness. Here are some friends that dare in their realms.
 
 [![VM]({{ site.url }}/assets/img/supafriend1.png)](https://vatsalmehra.com)
 
